# opensim-core-extension

./: .gitignore  .gitignore copy  CMakeLists.txt  README.md
OpenSim/Extension/Analyses/: RegisterTypes_osimAnalyses.cpp  RegisterTypes_osimAnalyses.h  osimAnalyses.h  osimAnalysesDLL.h
OpenSim/Extension/Common/: DistanceBaseDataReader.cpp  DistanceBaseDataReader.h  DistanceDataReader.cpp  RegisterTypes_osimCommon.cpp  RegisterTypes_osimCommon.h  osimCommon.h  osimCommonDLL.h
OpenSim/Extension/Tools/: RegisterTypes_osimTools.cpp  osimTools.h
app/: distanceReader.cpp  distancefk.cpp
data/: calibrated_gait2392_thelen2003muscle.osim  ik_l_comf_01-000_orientations.mot  myIMUMappings.xml
